message ServiceResponse {
	required bytes response = 1;
}