message TGSResponse {
	required bytes user_header = 1;
	required bytes ticket = 2;
}
