message UserTGSRequest {
	required bytes request = 1;
	required bytes ticket = 2;
}
